Developing of About Me section
Further additions made, style revised, functionality added. New CSS
image class added image.inset_left and image.inset_right

--- a/arcana/assets/css/main.css
+++ b/arcana/assets/css/main.css
@@ -2049,6 +2049,43 @@
 				width: 100%;
 			}
 
+		.image.inset_left {
+			display: block;
+			/*float: left;*/
+			width: 100%;
+			/*margin: 0 2em 2em 0;*/
+			/*position: relative;*/
+			/*top: 0.25em;*/
+		}
+
+			.image.inset_left img {
+				display: block;
+				float: left;
+				width: 20%;
+				margin: 0 2em 2em 0;
+				position: relative;
+				top: 0.25em;
+			}
+
+		.image.inset_right {
+			display: block;
+			/*float: left;*/
+			width: 100%;
+			/*margin: 0 2em 2em 0;*/
+			/*position: relative;*/
+			/*top: 0.25em;*/
+		}
+
+			.image.inset_right img {
+				display: block;
+				float: right;
+				width: 20%;
+				margin: 0 2em 2em 0;
+				position: relative;
+				top: 0.25em;
+			}
+
+
 /* Icon */
 
 	.icon {
